@@ -68,6 +68,8 @@ Version 1.3.15+svn:
      the standing animation instead of the standing frame
    * enabled caching images for lowmem unconditionally since it seems to save
      memory (bug #11022)
+   * disable stricker terrain validation, since a rogue scenario may avoid 
+     somebody to create any game (bug #11024)
 
 Version 1.3.15:
  * language and i18n:
